--- a/css/styles.css
+++ b/css/styles.css
@@ -1,173 +1,156 @@
-body{
+body {
     color: #192c2D;
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
+    padding: 0;
 }
 
-p{
+p {
     font-size: medium;
     line-height: 2;
 }
 
-h1{
+h1 {
     font-size: 5.625rem;
-    color: #3eacc3;
-    margin:  25px auto 0  auto;
+    color: #d72323;
+    margin: 25px auto 0 auto;
     font-family: 'Sacramento', cursive;
 }
-h2{
-    color: #3eacc3;
+
+h2 {
+    color: #d72323;
     font-family: 'Roboto', sans-serif;
     font-size: 2.5rem;
     font-weight: normal;
     line-height: 2;
     padding-bottom: 10px;
 }
-h3{
+
+h3 {
     color: #397279;
     font-size: large;
     font-family: 'Roboto', sans-serif;
 }
 
-a{
-    color: #3eacc3;
+a {
+    color: #fffaa4;
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
 }
-a:hover{
+
+a:hover {
     color: #e7eae3;
 }
-hr{
-    border:dotted #EAF6F6 6px;
+
+hr {
+    border: dotted #EAF6F6 6px;
     border-bottom: none;
     margin: 100px auto;
     width: 5%;
 }
-.pics{
-    padding-left: 50px;
-}
-.coding{
-    position:static ;
-    width: 200px;
-    height: 200px;
-    padding-bottom: 25;
-    top: 500px;
 
+.pics {
+    padding-left: 150px;
+    padding-right: 150px;
 }
-.controller{
-    position: absolute;
-    width: 125px;
-    height: 125px;
-    left:  600px;
-    top: 500px;
-   
+
+.icon {
+    padding: 20px;
 }
-.playing{
-    position: absolute;
-    width: 125px;
-    height: 125px;
-    right: 600px;
-    top: 500px;
-   
-}
-.profile-img{
+
+.profile-img {
     border-radius: 50%;
     width: 200px;
     height: 200px;
 }
-.unity{
+
+.unity {
     width: 25%;
     float: left;
     margin-right: 30px;
 }
-.web-dev{
+
+.web-dev {
     width: 25%;
     float: right;
     margin-left: 30px;
 }
-.skill-row{
+
+.skill-row {
     /* border: solid; */
     width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
 }
-.topContainer{
-    background-color: #e7eae3;
+
+.topContainer {
+    background-color: #303841;
     position: relative;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
-.midContainer{
-    background-color:white;
-    margin: 100px auto;
+
+.midContainer {
+    background-color: #eeeeee;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    /* margin: 100px auto; */
 }
-.bottomContainer{
-    background-color: #397279;
+
+.bottomContainer {
+    background-color: #303841;
     padding: 50px 0 20px;
 }
-.intro{
-   width: 30%;
-   margin: auto; 
+
+.intro {
+    width: 30%;
+    margin: auto;
 }
-.contact-message{
-   width: 40%;
-   margin: 40px auto 60px;
-    
+
+.contact-message {
+    width: 40%;
+    margin: 40px auto 60px;
+
 }
-.footer-link{
+
+.footer-link {
     color: #3eacc3;
     font-family: 'Roboto', sans-serif;
     margin: 30px 10px;
     text-decoration: none;
 }
-.copyright{
-    color:#e7eae3;
-    font-size:0.75rem ;
+
+.copyright {
+    color: #e7eae3;
+    font-size: 0.75rem;
     padding: 20px 0;
 }
-.desc{
+
+.desc {
     padding: 25px;
 }
+.card{
+    padding: 24px;
+}
+.card-holder{
+    background-color: #eeeeee;
+}
+.inner-card{
+    background-color: #fecd1a;
+}
+@media(max-width:1028px) {
+    #title {
+        text-align: center;
+    }
 
+    .icon {
+        display: none;
+    }
 
-.btn {
-    background: #3EACC3;
-    background-image: -webkit-linear-gradient(top, #3EACC3, #397279);
-    background-image: -moz-linear-gradient(top, #3EACC3, #397279);
-    background-image: -ms-linear-gradient(top, #3EACC3, #397279);
-    background-image: -o-linear-gradient(top, #3EACC3, #397279);
-    background-image: -webkit-gradient(to bottom, #3EACC3, #397279);
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    color: #FFFFFF;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    font-weight: 100;
-    padding: 20px;
-    -webkit-box-shadow: 1px 1px 20px 0 #000000;
-    -moz-box-shadow: 1px 1px 20px 0 #000000;
-    box-shadow: 1px 1px 20px 0 #000000;
-    text-shadow: 1px 1px 20px #000000;
-    border: solid #337FED 1px;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
- }
- 
- .btn:hover {
-    border: solid #337FED 1px;
-    background: #469099;
-    background-image: -webkit-linear-gradient(top, #469099, #3EACC3);
-    background-image: -moz-linear-gradient(top, #469099, #3EACC3);
-    background-image: -ms-linear-gradient(top, #469099, #3EACC3);
-    background-image: -o-linear-gradient(top, #469099, #3EACC3);
-    background-image: -webkit-gradient(to bottom, #469099, #3EACC3);
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    text-decoration: none;
- }
+    .container-fluid {
 
+        padding: 7% 15%;
+
+    }
+}
